@@ -22,6 +22,8 @@
     FIXED: [ 2381505 ] Ctrl+Shift+D in editor (KWrite) not work
     FIXED: Krusader fails to edit files containing international chars with Shift+F4
 
+  CHANGED: Changed default Alt+letter shortcuts because of [ 2564684 ].
+           See the details in SVNNEWS
   CHANGED: Initial Konfigurator size is now 900x680
      ARCH: view properties for detailed/brief/interviews are merged into one
      
